# reminder_agent

./: .agent_history.txt  .coverage  .gitignore  cli_agent.py  demo_agent.py  main.py  pyproject.toml
.specify/memory/: constitution.md
.specify/scripts/bash/: create-new-feature.sh
history/prompts/001-reminder-agent-basic/: 0009-implement-reminder-agent-basic-uses.implement.prompt.md  0010-implement-cli-chat-interface-for-reminder-agent.implement.prompt.md  0011-fix-cli-run-command.misc.prompt.md  0012-fix-cli-agent-missing-method.misc.prompt.md  0013-fix-cli-delete-command.misc.prompt.md  0014-make-delete-command-interactive.misc.prompt.md  0015-add-conversational-features.misc.prompt.md
history/prompts/constitution/: 0001-update-project-constitution-with-principles-and-standards.constitution.prompt.md
history/prompts/general/: 0007-adopt-phased-review-workflow.general.prompt.md  0008-commit-phase-1-setup-for-reminder-agent-library.general.prompt.md
history/prompts/plan/: 0003-create-implementation-plan-for-reminder-agent.plan.prompt.md  0004-clarify-cli-scope-for-reminder-agent-plan.plan.prompt.md
history/prompts/spec/: 0002-create-specification-for-reminder-agent-basic-uses.spec.prompt.md
history/prompts/tasks/: 0005-generate-tasks-for-reminder-agent-basic-uses.tasks.prompt.md  0006-incorporate-uv-init-in-setup-phase-of-tasks.tasks.prompt.md
specs/001-reminder-agent-basic/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
src/reminder_agent/: __init__.py  callbacks.py  core.py  models.py  persistence.py
tests/integration/: test_integration.py
tests/unit/: test_callbacks.py  test_core.py  test_models.py  test_persistence.py
(+2 files in other folders)
